@@ -4,6 +4,9 @@ Pint Changelog
 0.11 (unreleased)
 -----------------
 
+- Quantities wrapping NumPy arrays will no longer warning for the changed
+  array function behavior introduced in 0.10.
+  (Issue #1029, Thanks Jon Thielen)
 - **BREAKING CHANGE**:
   The array protocol fallback deprecated in version 0.10 has been removed.
   (Issue #1029, Thanks Jon Thielen)
